sec:Diskussion - Zusammenfassung und Überarbeitung

--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -12,36 +12,43 @@ Aus diesen Hypothesen scheint sich ableiten zu lassen, dass die Bindung der Elte
 
 % ---------------------------------------
 \subsection{Interpretation} \label{sec:Interpretation}
-Hat nun die Bindung einen Zusammenhang mit der Mediennutzung der Eltern und wird diese nicht auch vom Stress moderiert? Lässt sich zudem ein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das vorliegende Kapitel soll auf einzelne Aspekte näher eingehen und diese zu beantworten versuchen.
+Steht nun die Bindung in einen Zusammenhang mit der Mediennutzung der Eltern und wird diese Nutzung nicht auch vom Stress moderiert? Lässt sich zudem ein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das vorliegende Kapitel soll auf einzelne Aspekte näher eingehen und diese zu beantworten versuchen.
 
 % Stichprobe
 \subsubsection{Die Stichprobe ist weiblich und gut gebildet}
-Knapp 91\% der Studienteilnehmer*innen sind weiblich. Nur gerade mal 19 Teilnehmer haben an der Befragung teilgenommen. Diese ungleiche Verteilung könnte unterschiedlich Begründet werden. Einerseits scheint die Rollenverteilung bei der Erziehung von Kleinkindern nach wie vor stärker dem weiblichen Elternteil zuzufallen. Gemäss \citeA{Bien2006} leben zwei drittel der Mütter in Deutschland nach dem traditionellen Familienmodell. Ein weiterer Grund könnte sein, dass der Anreiz der Gutscheine für Männer weniger interessant gewesen ist. Zudem könnte sein, dass Männer generell weniger Interesse an Umfragen haben und deshalb weniger an solchen Studien teilnehmen. Obwohl der ungleichen Verteilung konnte die Fragestellung beantwortet werden, da im Vorfeld kein Einfluss des Geschlechts postuliert wurde.
+Knapp 91\% der Studienteilnehmerinnen sind weiblich. Nur gerade mal 19 Teilnehmer haben an der Befragung teilgenommen. Diese ungleiche Verteilung könnte unterschiedlich Begründet werden. Einerseits scheint die Rollenverteilung bei der Erziehung von Kleinkindern nach wie vor stärker dem weiblichen Elternteil zuzufallen. Gemäss \citeA{Bien2006} leben zwei drittel der Mütter in Deutschland nach dem traditionellen Familienmodell. Ein weiterer Grund könnte sein, dass der Anreiz der Gutscheine für Männer weniger interessant gewesen ist. Zudem könnte sein, dass Männer generell weniger Interesse an Umfragen haben und deshalb weniger an solchen Studien teilnehmen. Obwohl dieser ungleichen Verteilung konnte die Fragestellung ausreichend beantwortet werden, da im Vorfeld kein Einfluss des Geschlechts postuliert wurde. Zudem wurde kein signifikanter Unterschied bezüglich der Mediennutzung zwischen den Geschlechtern festgestellt. Es scheint, als ob das Geschlecht für die Mediennutzung während der Betreuung der Kinder keine Rolle spielen würde.
 
-Ein weiteres auffälliges Merkmal der Stichprobe ist das hohe Bildungslevel der Befragten. 60.6\% gaben an einen Abschluss im tertiären Sektor zu besitzen und 36.2\% gaben an einen Bildungsabschluss im Sekundar II Sektor gemacht zu haben. Gemäss \citeA{Bfs2017} aus dem Jahre 2017 in der Altersgruppe von 25 bis 34 Jährigen haben in der Schweiz 41.8\% einen Sekundar II Abschluss und 50.2\% einen Abschluss auf Tertiärstufe. Die Stichprobe liegt demzufolge leicht über dem schweizerischen Schnitt. Dies könnte auf die starke Rekrutierung aus dem privaten Umfeld des Autors zurückzuführen sein. Zudem scheint die hohe Bildung mit dem Durchschnittsalter der Stichprobe von 33.9 Jahren einher zu gehen. Gemäss \citeA{Bfs2017a} sind  Frauen und Männer mit einer Tertiärbildung tendenziell über 30 Jahre bei ihrem ersten Kind. Obwohl diese Zuordnung nachträglich nicht mehr möglich ist, so kann basierend auf der durchschnittlichen Personen im Haushalt von 3.6 davon ausgegangen werden, dass sich die Stichprobe im Schweizer Mittel bewegt. Ob sich die Bildung, das Einkommen und das Alter auf die Ergebnisse dieser Arbeit auswirken ist schwer zu sagen. Gemäss \citeA{Livingstone2015} haben höher gebildete Eltern mehr Vertrauen in ihre digitalen Fähigkeiten im Umgang mit Medien. Zudem scheinen höher gebildete Eltern mit einem höheren Einkommen digitale Aktivitäten mit ihrem Nachwuchs eher zu reglementieren. Des Weitern sind Soziodemografische Merkmale wichtige Faktoren der Eltern-Kind-Beziehung \cite{Kammerl2012}. Dies scheint in direktem Zusammenhang mit dieser Studie zu stehen. Demzufolge könnten die hohen Bildungsabschlüsse und die hohen Einkommen protektiv auf die Mediennutzung der Eltern im Beisein der Kinder wirken. 
+Ein weiteres auffälliges Merkmal der Stichprobe ist das hohe Bildungslevel der Befragten. 60.6\% gaben an einen Abschluss im tertiären Sektor zu besitzen und 36.2\% gaben an einen Bildungsabschluss im Sekundar II Sektor gemacht zu haben. Gemäss \citeA{Bfs2017} aus dem Jahre 2017 in der Altersgruppe von 25 bis 34 Jährigen haben in der Schweiz 41.8\% einen Sekundar II Abschluss und 50.2\% einen Abschluss auf Tertiärstufe. Die Stichprobe liegt demzufolge leicht über dem schweizerischen Schnitt. Dies könnte auf die Rekrutierung aus dem privaten Umfeld des Autors zurückzuführen sein. Zudem scheint die hohe Bildung mit dem Durchschnittsalter der Stichprobe von 33.9 Jahren einher zu gehen. Gemäss \citeA{Bfs2017a} sind  Frauen und Männer mit einer Tertiärbildung tendenziell über 30 Jahre bei ihrem ersten Kind. Obwohl diese Zuordnung nachträglich nicht mehr möglich ist, so kann basierend auf der durchschnittlichen Anzahl Personen im Haushalt von 3.6 davon ausgegangen werden, dass sich die Stichprobe im Schweizer Mittel bewegt. Ob sich die Bildung, das Einkommen und das Alter auf die Ergebnisse dieser Arbeit auswirken ist schwer zu sagen. Gemäss \citeA{Livingstone2015} haben höher gebildete Eltern mehr Vertrauen in ihre digitalen Fähigkeiten im Umgang mit Medien. Zudem scheinen höher gebildete Eltern mit einem höheren Einkommen digitale Aktivitäten mit ihrem Nachwuchs eher zu reglementieren. Des Weiteren scheinen Soziodemografische Merkmale wichtige Faktoren der Eltern-Kind-Beziehung zu sein \cite{Kammerl2012}. All diese Aussagen scheinen in direktem Zusammenhang mit dieser Studie zu stehen. Demzufolge könnten die hohen Bildungsabschlüsse und die hohen Einkommen protektiv auf die Mediennutzung der Eltern im Beisein der Kinder wirken und dem postulierten Effekt einer unsicheren Bindung auf die Mediennutzung entgegenwirken. 
 
 \subsubsection{Haben Fachhochschulabgänger weniger Zeitmangel und Termindruck?}
-Werden die demografischen Daten mit den einzelnen erfassten Skalen in Verbindung gesetzt, so kann ein Zusammenhang zwischen der Bildung und der Stressskala Anforderung gefunden werden. Diese bildet die Wahrnehmung vor allem externer Anforderungen, wie Zeitmangel, Termindruck oder Aufgabenbelastung ab. Die Gruppe Berufsmatura / Fachmittelschule hatte im Vergleich zur Gruppe Höhere Fachschule im Schnitt eine höhere Ausprägung im Bereich Anforderung. Heisst dies nun, dass sich Abgänger einer Berufsmatura in der Regel gefordert fühlen als Abgänger einer höheren Fachschule? Rein intuitiv könnte diesem Ergebnis zugestimmt werden. Abgänger einer Fachhochschule wurden  höhere Anforderungen für die Erreichung des Diploms abverlangt als zur Erreichung einer Berufsmatura, da sich diese beiden Ausbildungen auf unterschiedlich anspruchsvollen Stufen befinden. Doch um es schlüssig interpretieren zu können, müssten weitere Untersuchungen angestellt werden, was im Bezug zur Forschungsfrage in dieser Arbeit an einem anderen Ort zu erfolgen hat. Rückschliessend kann gefolgert werden, dass bezüglich der demografischen Daten der Stichprobe keine signifikanten Zusammenhänge zwischen den einzelnen Skalen gefunden werden konnte. Dies scheint auf eine heterogene Zusammensetzung der Stichprobe bezüglich den erfassten Skalen hinzudeuten, da mittels demografischen Daten keine statistisch signifikanten Gruppen der doch sehr prägenden Konstrukte wie Stress und Bindung gebildet werden konnte. 
+Werden die demografischen Daten mit den einzelnen erfassten Skalen in Verbindung gesetzt, so kann ein Zusammenhang zwischen der Bildung und der Stressskala Anforderung gefunden werden. Diese Skala bildet die Wahrnehmung vor allem externer Anforderungen, wie Zeitmangel, Termindruck oder Aufgabenbelastung ab. Die Gruppe Berufsmatura / Fachmittelschule hatte im Vergleich zur Gruppe Höhere Fachschule im Schnitt eine höhere Ausprägung im Bereich Anforderung. Dies könnte ein Hinweis darauf sein, dass Abgänger einer Berufsmatura in der Familie eine höhere Anforderung erleben als Abgänger einer höheren Fachschule. Abgänger einer Fachhochschule haben höhere Anforderungen für die Erreichung des Diploms durchlaufen, da sich diese  Ausbildung auf einem höheren und demzufolge anspruchsvolleren Stufe befindet als eine Berufsmatura. Deshalb könnten sich Abgänger einer höheren Fachschule an die an sie gestellten Anforderungen gewohnt sein und können diese auch tendentiell besser aushalten. Doch um eine schlüssige Interpretation machen zu können, müssten weitere Untersuchungen in diesem Bereich angestellt werden. Im Bezug zur hier gestellten Forschungsfrage  könnte diese höhere Belastbarkeit wiederum protektiv auf das Stresserleben der Stichprobe gewirkt haben. Da dies jedoch nur anhand einer einzigen Ausprägung des \acrshort{psq} aufgetreten ist, wird dieser Effekt vernachlässigbar sein. Rückschliessend kann gefolgert werden, dass bezüglich der demografischen Daten der Stichprobe keine signifikanten Zusammenhänge zwischen den einzelnen Skalen Bindung, Stress und subjektives Wohlbefinden gefunden werden konnten. Bezogen auf die demografischen Daten scheint die Stichprobe sehr heterogen zu sein, da keine statistisch signifikanten Gruppen gebildet werden konnten. Dies wiederum würde für die Gültigkeit der Stichprobe (repräsentativ) und der untersuchten Instrumente sprechen, da keine Kohorteneffekte mittels dieser Daten ersichtlich wurden.
+
+\subsubsection{Die Stichprobenaufteilung bezüglich Bindung widerspiegelt die Forschung}
+Die Bindungsskala \acrfull{aas}, bestehend aus den drei Unterskalen \enquote{Nähe}, \enquote{Vertrauen} und \enquote{Angst}, kann zu einer erweiterten Skala \enquote{Sichere Bindung} kombiniert werden. In dieser Skala die Probanden anhand sicherer und unsicherer Bindung aufgeteilt werden können. In der vorliegenden Stichprobe ergab das eine Verteilung von 
+69.7\% sicher und 30.3\% unsicher gebundenen Eltern. Dies entspricht in etwa dem Befund der Metaanalyse von \citeA{VanIJzendoorn1988}, die annähernd 2000  Probanden untersuchten, deren Bindungsmuster mittels  Fremde-Sitationstests eingeteilt wurde. Aus dieser Studie geht eine Aufteilung von 65\% sicher und 35\% unsicher gebundene Probanden hervor. Dies wiederum entspricht in etwa den Befunden von \citeA{Ainsworth1970} in ihrer Forschung des Fremde-Situations-Test von 70\% sicher gebundenen und 30\% unsicher gebundenen Probanden. Somit kann davon ausgegangen werden, dass die vorliegenden Stichprobe hinsichtlich der Bindungsmuster sicher und unsicher der üblichen Verteilung in der Bevölkerung entspricht.
+
+\subsubsection{Eltern nutzen am liebsten das Smartphone während der Betreuung}
+Eltern in dieser Stichprobe bevorzugen die Nutzung des Smartphones während der Betreuung. Über 2/3 der befragten Eltern wollen während der Betreuung ihrer Kinder nicht auf das Smartphone verzichten. Darüber hinaus haben über 4/5 der Familien zwei solcher Geräte im Haushalt. 1/10 sogar 3 und mehr. Damit übertrifft das Smartphone den Computer und den Fernseher. Gemessen an der Medientätgkeiten wird während der Betreuung jedoch am häufigsten Radio gehört, gefolgt von Fernseh udn Video schauen. Dies verwundert insofern, als dass hier ebenso Smartphonetätigkeiten vermutet werden. Doch lassen sich die erfassten Medientätigkeiten rückwirkend nicht mehr eindeutig einem Gerät zuordnen (siehe auch \textit{\nameref{sec:Methodenkritik}} weiter unten). Am ehesten kann das Schreiben von Textnachrichten als eine Medientätigkeit identifiziert werden, die aussschliesslich auf dem Smartphone ausgeführt wird ( Auch wenn dies rein technisch auch von anderen Geräten möglich ist). Dennoch kann anhand der Befunde darauf geschlossen werden, dass das Smartphonenutzung einen hohen Stellenwert während der Betreuung von Kindern einnimmt und nahezug nicht mehr wegzudenken ist. Durch das breite Einsatzspektrum lassen sich anhand dieser Befunde, neben dem bereist erwähnten Schreiben von Textnachrichten, beliebte Medientätigkeiten wie Telefonieren, Internet surfen und Musik hören identifizieren. Für zukünftige Arbeiten könnte es nützlich sein, in der Befragung die einzelnen Medientätigkeiten explizit einem Gerät zuzuordnen, um somit ein umfassenderes Bild der elterlichen Medientätigkeit zu erhalten.  
+
 
 \subsubsection{Unsicher Gebundene verbringen mehr Zeit mit Textnachrichten}
-Die Bindungsskala \acrfull{aas} bestehend aus den drei Unterskalen \enquote{Nähe}, \enquote{Vertrauen} und \enquote{Angst} kann zu einer erweiterten Skala \enquote{Sichere Bindung} kombiniert werden, in der die Probanden anhand sicherer und unsicherer Bindung aufgeteilt wurden. In der vorliegenden Stichprobe ergab das eine Verteilung von 
-69.7\% sicheren und 30.3\% unsichere Eltern. Dies entspricht in etwa dem Befund der Metaanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden fanden. Was wiederum in etwa den Befunden von \citeA{Ainsworth1970} in ihrem Fremde-Situations-Test von 70\% sicher gebundene und 30\% unsicher gebundenen entspricht. Es kann somit davon ausgegangen werden, dass die vorliegenden Stichprobe hinsichtlich der Bindungsmuster sicher und unsicher der üblichen Verteilung entspricht.
-
-Die erfasste Mediennutzung der Eltern enthält eine Sammlung von unterschiedlichen Medientätigkeiten, die auf unterschiedlichen Medien ausgeführt werden können. Auf dem Smartphone zum Beispiel, können alle die in der Umfrage abgebildeten Tätigkeiten genutzt werden. Im Gegenzug zu einem Buch, mit dem keine Musik gehört und keine Filme geschaut werden kann. Wie bereits geschildert, konnte gemäss Hypothese $H1$ kein Zusammenhang zwischen der Bindung und der Mediennutzung insgesamt festgestellt werden. Werden jedoch die Bindungskategorien \enquote{sicher} und \enquote{unsicher} in Beziehung zu den einzelnen Medientätigkeiten gesetzt, so entsteht zwischen dem Schreiben von Textnachrichten, was vorwiegend auf dem Smartphone erfolgt, und der Bindung ein signifikanter Zusammenhang. Dieser Zusammenhang wird grösser, wenn nur die Zeit der Mediennutzung verwendet wird, wenn das zu betreuende Kind wach ist. Das heisst, dass die Bindung der Eltern durchaus in einem Zusammenhang mit dem Schreiben von Textnachrichten während der Betreuung ihrer Kinder steht, wenn auch nur in einem geringen Mass (geringer Effekt gemäss \citeA{Cohen1988a}). Relevant ist dieser Befund insofern, als dass die Nutzung des Smartphones in dieser Stichprobe während der Betreuung am meisten stattgefunden hat. Zudem gaben die Probanden an, am wenigsten auf das Smartphone während der Betreuung verzichten zu können. Daraus lässt sich schliessen, dass dem Smartphone eine grosse Bedeutung für die Eltern in der Kinderbetreuung zufällt. Da aus den in dieser Arbeit erfassten Daten keine direkte Smartphonenutzung in Minuten extrahiert werden kann (siehe auch \textit{\nameref{sec:Methodenkritik}} weiter unten), könnte es für zukünftige Forschung interessant sein, die Bindung der Eltern im direkten Zusammenhang mit dem Smartphone und den darauf ausgeführten Tätigkeiten zu stellen. Insofern lässt sich die Befürchtung von \citeA{Prekop2017}, dass unsicher Gebundenen lieber eine Bindung zu technischen Dingen aufbauen, im Zusammenhang mit dem Smartphone nicht ganz ausschliessen. Zudem unterstreicht dieser Befund die Ergebnisse weiterer Studien, die Bindung mit  einer Medientätigkeit in Verbindung brachten \cite{Jia2016, Chang2015, Lin2011a}. Diese untersuchten die problematische Internetnutzung (\textit{engl. problematic internet use (PIU)}) und setzten sie in Verbindung mit der Bindungstheorie. Dabei stellten sie fest, dass unsichere Bindung als Prädiktor für die problematische Internetnutzung bezeichnet werden kann. An dieser Stelle sei ebenso auf die Masterarbeit von \citeA{Dietziker2018} verwiesen, der den Zusammenhang der Smartphonenutzung der Eltern auf die Bindungssicherheit ihrer Kinder untersuchte. Dabei konnte er feststellen, dass Eltern mit ambivalent (unsicher) gebundenen Kindern, ihr Smartphone im Beisein ihrer Kinder signifikant häufiger benutzten als Eltern sicher gebundener Kinder. Dies beschreibt keinen gerichteten Zusammenhang und es bleibt offen, ob die Eltern wegen ihren ambivalent gebundenen Kindern das Smartphone mehr benützen, oder ob die häufige Nutzung sich auf die Bindung der Kinder niederschlägt.
+Die erfasste Mediennutzung der Eltern enthält eine Sammlung von unterschiedlichen Medientätigkeiten, die auf unterschiedlichen Medien ausgeführt werden können. Auf dem Smartphone zum Beispiel, können alle die in der Umfrage abgebildeten Tätigkeiten genutzt werden. Im Gegenzug zu einem Buch, mit dem keine Musik gehört und keine Filme geschaut werden kann. Wie bereits geschildert, konnte gemäss Hypothese $H1$ kein Zusammenhang zwischen der Bindung und der totalen Mediennutzung festgestellt werden. Werden jedoch die Bindungskategorien \enquote{sicher} und \enquote{unsicher} in Beziehung zu den einzelnen Medientätigkeiten gesetzt, so entsteht zwischen dem Schreiben von Textnachrichten, was vorwiegend auf dem Smartphone erfolgt, und der Bindung ein signifikanter Zusammenhang. Dieser Zusammenhang wird grösser, wenn nur die Zeit der Mediennutzung verwendet wird, wenn das zu betreuende Kind wach ist. Das heisst, dass die Bindung der Eltern durchaus in einem Zusammenhang mit der Mediennutzung der Eltern während der Betreuung ihrer Kinder steht, wenn auch nur vorwiegend mit dem Schreiben von Textnachrichten und dies in einem geringen Masse (geringer Effekt gemäss \citeA{Cohen1988a}). Wird davon ausgegangen, dass das Schreiben von Textnachrichten vorwiegend auf dem Smartphone erfolgte, so könnte hier ein gnerealsiserter Zusammenhang zwischen der Smartphonenutzung und der Bindung der Eltern postuliert werden. Leider lassen sich in dieser Arbeit keine Daten der direkten Smartphonenutzung in Minuten extrahieren (siehe auch \textit{\nameref{sec:Methodenkritik}} weiter unten). Für zukünftige Forschung könnte es interessant sein, die Bindung der Eltern im direkten Zusammenhang mit der Smartphonenutzung und den darauf ausgeführten Tätigkeiten zu setzen. Insofern lässt sich die Befürchtung von \citeA{Prekop2017}, dass unsicher Gebundenen lieber eine Bindung zu technischen Dingen aufbauen, im Zusammenhang mit dem Smartphone und den Befunden in dieser Arbeit nicht ganz ausschliessen. Zudem unterstreichen die Ergebnisse weiterer Studien, welche die Bindungstheorie mit der problematischen Internetnutzung (\textit{engl. problematic internet use (PIU)}) in Verbindung brachten \cite{Jia2016, Chang2015, Lin2011a}. Dabei stellten sie fest, dass dieunsichere Bindung als Prädiktor für die problematische Internetnutzung bezeichnet werden kann. An dieser Stelle sei ebenso auf die Masterarbeit von \citeA{Dietziker2018} verwiesen, der den Zusammenhang der Smartphonenutzung der Eltern auf die Bindungssicherheit ihrer Kinder untersuchte. Dabei konnte die Studie feststellen, dass Eltern mit ambivalent (unsicher) gebundenen Kindern, ihr Smartphone im Beisein ihrer Kinder signifikant häufiger benutzten als Eltern sicher gebundener Kinder. Dies beschreibt keinen gerichteten Zusammenhang und es bleibt offen, ob die Eltern wegen ihren ambivalent gebundenen Kindern das Smartphone mehr benützen, oder ob die häufige Nutzung sich auf die Bindung der Kinder niederschlägt. Doch wird in diesem Bereich weitere Forschung notwendig werden, da beide Befunde von einem Zusammehang zwischen der Smartphonenutzung und dem unsicheren Bindungsstil, sowohl auf Seiten der Eltern, als auch auf Seiten der Kinder, ausgehen.
 
 \subsubsection{Nähe, Vertrauen, Freude und Wohlbefinden als Prädiktoren für weniger SMS}
-Gemäss der Hypothesenprüfung konnte kein Zusammenhang zwischen der Mediennutzung und der Bindung, bezw. des subjektiven erlebten Stress gefunden werden. Sobald jedoch die Mediennutzung in die einzelnen Tätigkeiten unterteilt wird, kann ein Zusammenhang zwischen der Bindung und dem Schreiben von Textnachrichten gefunden werden (siehe vorheriges Kapitel). Sobald die einzelnen Skalenausprägungen der Konstrukte Bindung, Stress und subjektives Wohlbefinden in ihre Einzelteile zerlegt werden, können diverse Korrelationen zwischen den einzelnen Medientätigkeiten und den einzelnen Skalenausprägungen gefunden werden. Gemäss \citeA{Schmidt2004} lassen sich in der Deutschen Version des \acrshort{aas} die Bindungsstile nicht direkt zuordnen (siehe auch \textit{\nameref{sec:Methodenkritik}}). Somit erscheint es legitim, die einzelnen Skalenausprägungen hinsichtlich der einzelnen Mediennutzung zu prüfen. Auffällig bei den Befunden ist, dass das Schreiben von textnachrichten mit nahezu jeder Skala korreliert (einzelne Ergebnisse siehe \nameref{app:ResultateMedientaetigkeiten} im Anhang). Die Bindungsskalen Nähe und Vertrauen gehen negativ mit dem Schreiben von Textnachrichten währendem das Kind wach ist einher. Wogegen die Bindungsskala Angst positiv einhergeht. Wird davon ausgegangen, dass Textnachrichten vorwiegend auf dem Smartphone geschrieben werden, scheinen Probanden, die sich mit Nähe und Intimität in Beziehung zu anderen wohl fühlen und darauf vertrauen können, dass andere für sie erreichbar sind, während der Betreuung weniger mit dem Smartphone beschäftigt zu sein. Zudem scheinen Probanden, die Ängste davor haben in einer Beziehung nicht geliebt zu werden, einen erhöhten Smartphonegebrauch aufzuweisen. Ebenso scheinen Probanden mit einer tiefen Ausprägung auf der Bindungsskala Vertrauen weniger Textnachrichten zu verfassen währendem das Kind schläft. Ein erhöhter Smarpthonegebrauch scheint mit erhöhten Sorgen, Zukunftsängsten und Frustrationsgefühlen einherzugehen. Wohingegen Probanden mit einem hohen Ausmass an Freude das Smartphone eher weniger benutzen, um Textnachrichten zu schreiben. Hingegen schreiben Probanden mit einem ehröhten Stresserleben tendentiell eher mehr Textnachrichten. Bezogen auf das subjektive Wohlbefinden geht ein hohes Wohlbefinden mit einem verringerten Smartphonegrbacuh einher. All diese Skalen deuten darauf hin, dass ein schwacher Zusammenhang zwischen dem Schreiben von Textnachrichten und den einzelnen Skalen vorherrscht. Insgesamt gesehen deuten diese Ergebnisse auf einen Zusammenhang zwischen der Bindung und dem Stress zur Mediennutzung, explizit, dem Smartphonegbrauch hin. Das es sich jedoch um schwache Effekte handelt, wird der Zusammenhang marginal sein und deshalb auch in den aufgestellten Hypothesen nicht abbildbar. Vielmehr könnte von einer Tendenz in diesem Bereich gesprochen werden. 
+Gemäss der Hypothesenprüfung konnte kein Zusammenhang zwischen der Mediennutzung und der Bindung, bezw. des subjektiven erlebten Stress gefunden werden. Sobald jedoch die Mediennutzung in die einzelnen Tätigkeiten unterteilt wird, kann ein Zusammenhang zwischen der Bindung und dem Schreiben von Textnachrichten gefunden werden (siehe vorheriges Kapitel). Sobald die einzelnen Skalenausprägungen der Konstrukte Bindung, Stress und subjektives Wohlbefinden in ihre Einzelteile zerlegt werden, können diverse Korrelationen zwischen den einzelnen Medientätigkeiten und den einzelnen Skalenausprägungen gefunden werden. Gemäss \citeA{Schmidt2004} lassen sich in der Deutschen Version des \acrshort{aas} die Bindungsstile nicht direkt zuordnen (siehe auch \textit{\nameref{sec:Methodenkritik}}). Somit erscheint es legitim, die einzelnen Skalenausprägungen hinsichtlich der einzelnen Mediennutzung zu prüfen. Auffällig bei den Befunden ist, dass das Schreiben von textnachrichten mit nahezu jeder Skala korreliert (einzelne Ergebnisse siehe \nameref{app:ResultateMedientaetigkeiten} im Anhang). Die Bindungsskalen Nähe und Vertrauen gehen negativ mit dem Schreiben von Textnachrichten währendem das Kind wach ist einher. Wogegen die Bindungsskala Angst positiv einhergeht. Wird davon ausgegangen, dass Textnachrichten vorwiegend auf dem Smartphone geschrieben werden, scheinen Probanden, die sich mit Nähe und Intimität in Beziehung zu anderen wohl fühlen und darauf vertrauen können, dass andere für sie erreichbar sind, während der Betreuung weniger mit dem Smartphone beschäftigt zu sein. Zudem scheinen Probanden, die Ängste davor haben in einer Beziehung nicht geliebt zu werden, einen erhöhten Smartphonegebrauch aufzuweisen. Ebenso scheinen Probanden mit einer tiefen Ausprägung auf der Bindungsskala Vertrauen weniger Textnachrichten zu verfassen währendem das Kind schläft. Ein erhöhter Smarpthonegebrauch scheint mit erhöhten Sorgen, Zukunftsängsten und Frustrationsgefühlen einherzugehen. Wohingegen Probanden mit einem hohen Ausmass an Freude das Smartphone eher weniger benutzen, um Textnachrichten zu schreiben. Hingegen schreiben Probanden mit einem ehröhten Stresserleben tendentiell eher mehr Textnachrichten. Bezogen auf das subjektive Wohlbefinden geht ein hohes Wohlbefinden mit einem verringerten Smartphonegebrauch einher. All diese Skalen deuten darauf hin, dass ein schwacher Zusammenhang zwischen dem Schreiben von Textnachrichten und den einzelnen Skalen vorherrscht. Insgesamt gesehen deuten diese Ergebnisse auf einen Zusammenhang zwischen der Bindung und dem Stress zur Mediennutzung, explizit, dem Smartphonegbrauch hin. Das es sich jedoch um schwache Effekte handelt, wird der Zusammenhang marginal sein und deshalb auch in den aufgestellten Hypothesen nicht abbildbar. Vielmehr könnte von einer Tendenz in diesem Bereich gesprochen werden. Ebenso kann durch diese Befunde die Richtung des Zusammenhangs nicht bestimmt werden. Es ist also unklar, ob das Schreiben von Textnachtichten sich auf das subjektive Wohlbefinden auswirkt, oder ob ein geringes Wohlbefinden mit einem erhöhten Schreiben von Nachrichten einhergeht.  
 
-\textit{TBD: Stresswerte interpretieren!} Stichprobe ist im unteren Dittel angesiedelt. Repräsentativ?
 
-\subsubsection{TBD: Zusammenfassung Interpretation}
-Hier wird nochmals in kurzer Form aufgelistet, was in den vorhergehenden Kapiteln ausführlich besprochen wurde.
+\subsubsection{Zusammenfassung Interpretation}
+Die oben diskutierten Befunde sollen für eine bessere Übersicht an dieser Stelle nochmals aufgelistet werden.
 \begin{itemize}
-    \item Zusammensetzung Stichproben: Hoher Bildungsgrad, hohes Einkommen -> Auswirkung auf 
-    \item heterogene Gruppe
-    \item Mediennutzung basierend auf Textnachrichten signifikant
+    \item Die Stichprobe ist weiblich und gut gebildet, was sich protektiv auf die Mediennutzung der Eltern auswirken könnte.  
+    \item Zudem scheinen höher gebildete Eltern Anforderung während der Betreuung tiefer zu erleben als tiefer gebildete Eltern.
+    \item Die Stichprobe scheint sich repräsentativ gemessen an bestehende Studien in sicher und unsicher gebundene Probanden zu unterteilen.
+    \item Eltern dieser Stichprobe scheinen am liebsten das Smartphone zu nutzen und hören während der Beteruung am liebsten Radio.
+    \item Unsicher gebundene Eltern scheinen während der Betreuung mehr Textnachrichten zu schreiben als sicher gebundene Eltern. 
+    \item Zudem scheint das Schreiben von Textnachrichten in einem Zusammenhang mit mehr Sorgen, weniger Freude, einem erhöhten Stresserleben und einem geringeren subjektiven Wohlbefinden zu stehen. 
 \end{itemize}
-Gemäss der Hypothesenthests konnte kein Zusammenhang zwischen der Bindung und des erlebten Stress der Eltern gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurden, scheinen ein zu breites Spektrum abzubilden, welches zu undefiniert betrachtet werden kann. Bindung scheint demzufolge nicht mit allen Medientätigkeiten im Zusammenhang zu stehen, sondern nur mit ausgewählten. Wie in diesem Fall, dem Schreiben von Textnachrichten. Dies sagt jedoch noch nichts über einen möglichen Zusammenhang zwischen dem Medienverhalten der Eltern und den Entwicklungsaufgaben in der Eltern-Kind-Interaktion der Kinder aus. Diese Interaktion wurde gänzlich ausgeklammert, scheint jedoch für zukünftige Forschung zentral zu sein. Auch sagt diese Untersuchung nichts über einen möglichen Zusammenhang zwischen der Bindung der Eltern und der Bindung der Kinder aus. Es könnte gut sein, dass gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der entwickelnden Bindung des Kindes stehen (vgl. Masterarbeit \citeA{Dietziker2018}). Wobei hier zu untersuchen wäre, in welcher Form diese Medien das Bindungsverhalten übertragen. Es scheint jedoch einen Zusammenhang zwischen der Bindung der Eltern und dem Smartphonegebrauch der Eltern während der Betreuung zu geben. Welchen Auswirkungen dies auf die Bindung der Kindern hat, wurde ansatzweise in der Arbeit von \citeA{Dietziker2018} untersucht. Doch wird es weitere Forschung in diesem Gebiet geben müssen. Die Bindung könnte dabei eine zentrale Rolle im Umgang mit dem Smartphone spielen.
+
 
 % ---------------------------------------
 \subsection{Methodenkritik} \label{sec:Methodenkritik}
@@ -73,3 +80,5 @@ Für die Erfassung des aktuell subjektiv Belastungserleben der Eltern wurde das 
 % ---------------------------------------
 \subsection{TBD: Ausblick} \label{sec:Ausblick}
 \textit{TBD:} Neben dem Smartphone wäre auch das Tablet explizit zu erfassen. Beiden diesen Geräten wäre gut vorstellbar, dass sich das Gerät als eine Art physische Barriere zwischen der Eltern-Kind-Interaktion entpuppen würde.
+
+Gemäss der Hypothesenthests konnte kein Zusammenhang zwischen der Bindung und des erlebten Stress der Eltern gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurden, scheinen ein zu breites Spektrum abzubilden, welches zu undefiniert betrachtet werden kann. Bindung scheint demzufolge nicht mit allen Medientätigkeiten im Zusammenhang zu stehen, sondern nur mit ausgewählten. Wie in diesem Fall, dem Schreiben von Textnachrichten. Dies sagt jedoch noch nichts über einen möglichen Zusammenhang zwischen dem Medienverhalten der Eltern und den Entwicklungsaufgaben in der Eltern-Kind-Interaktion der Kinder aus. Diese Interaktion wurde gänzlich ausgeklammert, scheint jedoch für zukünftige Forschung zentral zu sein. Auch sagt diese Untersuchung nichts über einen möglichen Zusammenhang zwischen der Bindung der Eltern und der Bindung der Kinder aus. Es könnte gut sein, dass gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der entwickelnden Bindung des Kindes stehen (vgl. Masterarbeit \citeA{Dietziker2018}). Wobei hier zu untersuchen wäre, in welcher Form diese Medien das Bindungsverhalten übertragen. Es scheint jedoch einen Zusammenhang zwischen der Bindung der Eltern und dem Smartphonegebrauch der Eltern während der Betreuung zu geben. Welchen Auswirkungen dies auf die Bindung der Kindern hat, wurde ansatzweise in der Arbeit von \citeA{Dietziker2018} untersucht. Doch wird es weitere Forschung in diesem Gebiet geben müssen. Die Bindung könnte dabei eine zentrale Rolle im Umgang mit dem Smartphone spielen.
