Korrektur Ergebnisse anhand CK

--- a/content/Anhang/MedienFragebogen.tex
+++ b/content/Anhang/MedienFragebogen.tex
@@ -1,4 +1,4 @@
-Der im Folgenden dargestellte Medien und Mediennutzung enthält die Items, die in der Onineumfrage verwendet wurden. 
+Der im Folgenden dargestellte Medien und Mediennutzung enthält die Items, die in der Onine-Umfrage verwendet wurden. 
 
 Verwendete Medien während der Betreuung: \begin{seriate}
   \item Smartphone
@@ -8,7 +8,7 @@ Verwendete Medien während der Betreuung: \begin{seriate}
   \item Printmedien (Buch / Zeitung / Heft / Comic)
   \item Foto- und / oder Videokamera
   \item Spielekonsole
-  \item MP3 Player
+  \item MP3-Player
 \end{seriate}.
 
 Medientätigkeiten in Minuten während der letzten Betreuung (Unterscheidung, ob das Kind wach war oder geschlafen hat):
@@ -39,14 +39,14 @@ Anzahl Geräte und Medien im Haushalt (Auswahl zwischen O, 1, 2, 3 oder mehr Ger
 \end{seriate}.
 
 
-Frage nach dem Medium, auf das während der Betreuung nicht verzichtet werden kann (maximale Auswahl von 3 Geräten): 
+Frage nach dem Medium, auf das während der Betreuung nicht verzichtet werden kann (maximale Auswahl von drei Geräten): 
 \begin{seriate}
   \item Smartphone
   \item Desktop / Laptop Computer
   \item Tablet
   \item Radio / Stereoanlage / CD-Player
   \item Abo Tageszeitung / Zeitschrift
-  \item Foto- Videokamera
+  \item Foto- oder Videokamera
   \item Spielekonsole
   \item MP3 Player
 \end{seriate}.
