--- a/main.tex
+++ b/main.tex
@@ -139,7 +139,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \section{Histogramme für Hypothese 1}\label{app:Hypo1_Histogramme}
 \input{content/Anhang/Hypo1_Histogramm.tex}
 \newpage
-\section{Q-Q-Digramme für Hypothese 1}\label{app:Hypo1_QQDiagramme}
+\section{Q-Q-Diagramme für Hypothese 1}\label{app:Hypo1_QQDiagramme}
 \input{content/Anhang/Hypo1_QQDiagramm.tex}
 \newpage
 \section{Boxplot für Hypothese 1}\label{app:Hypo1_Boxplot}
@@ -179,7 +179,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \newpage
 
 % Medien Fragebogen
-\section{Medien und Mediennutzungs Fragebogen}\label{app:MedienFragebogen}
+\section{Medien und Mediennutzungs-Fragebogen}\label{app:MedienFragebogen}
 \input{content/Anhang/MedienFragebogen.tex}
 \newpage
 
