--- a/content/Anhang/Stichprobe.tex
+++ b/content/Anhang/Stichprobe.tex
@@ -1,4 +1,4 @@
-\begin{longtable}[l]{m{0.5em}  m{20em}  m{5em}} 
+\begin{longtable}[l]{m{0.5em}  m{25em}  m{5em}} 
   \caption{Gesamtstichprobe \label{table:Gesamtstichprobe}}\\
   &&\\
   \hline\hline
@@ -53,7 +53,7 @@
   & Berufsmatura / Fachmittelschule (Sekundär II) & 19 (8.7)\\
   & Gymnasiale Maturität (Sekundär II) & 8 (3.7)\\
   & Höhere Fachschule (Tertiär) & 50 (22.9)\\
-  & Uni / Fachhochschule (Tertiär) & 73 (33.5)\\
+  & Universität / Fachhochschule (Tertiär) & 73 (33.5)\\
   & Doktorat (Tertiär) & 9 (4.1)\\
   & keine Angabe & 1 (.5)\\
   
@@ -63,7 +63,7 @@
   & Tertiär & 132 (60.6)\\
   & keine Angabe & 1 (.5)\\
   
-  \multicolumn{2}{l}{Anzahl Personen im haushalt} \\
+  \multicolumn{2}{l}{Anzahl Personen im Haushalt} \\
   &  $M$ (Min./Max.) & 3.6 (2/8)\\
   & $SD$ &  .8\\
   
@@ -72,8 +72,8 @@
   & alleinstehend, nicht verheiratet & 3 (1.4)\\
   & in Partnerschaft, verheiratet & 156 (71.6)\\
   & in Partnerschaft, nicht verheiratet & 55 (25.2)\\
-  & in einer WG, verheiratet & 1 (.5)\\
-  & in einer WG, nicht verheiratet & 1 (.5)\\
+  & in einer Wohngemeinschaft (WG), verheiratet & 1 (.5)\\
+  & in einer Wohngemeinschaft (WG), nicht verheiratet & 1 (.5)\\
   
   \multicolumn{2}{l}{Fremdbetreuung in Tagen} \\
   &  $M$ (Min./Max.) & 1.0 (0/5)\\
